adds benchmarks for the stack-safe fold implementations

--- a/bower.json
+++ b/bower.json
@@ -34,6 +34,7 @@
     "purescript-console": "^5.0.0",
     "purescript-integers": "^5.0.0",
     "purescript-math": "^3.0.0",
-    "purescript-unsafe-coerce": "^5.0.0"
+    "purescript-unsafe-coerce": "^5.0.0",
+    "purescript-minibench": "^3.0.0"
   }
 }
